# Surveillance-Data-Synthesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  consts.h  detection.cpp  detection.h  list_parser.cpp  main.cpp  observed_areas.csv.example  postprocess.cpp  preprocess.cpp  preprocess.h  streams.csv.example  streams.listfile  utils.cpp  utils.h
src/: .gitignore  CMakeLists.txt  Makefile  app  cmake_install.cmake  coco_labels.cpp  coco_labels.h  consts.h  csv.cpp  csv.h  detection.cpp  detection.h  list_parser.h  main.cpp  postprocess.h  preprocess.cpp  preprocess.h  remapper.cpp  remapper.h  streams.cpp  streams.h  types.h  utils.cpp  utils.h
src/components/: BaseComponent.hpp  CameraView.cpp  CameraView.hpp  DetectionOverlay.cpp  DetectionOverlay.hpp  MinimapOverlay.cpp  MinimapOverlay.hpp  ObservedArea.cpp  ObservedArea.hpp  PixelPicker.cpp  PixelPicker.hpp
src/types/: point.hpp  triangle.hpp
