cmake_minimum_required(VERSION 4.1)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(app)
find_package(OpenCV REQUIRED)
find_package(raylib REQUIRED)
add_executable(app main.cpp list_parser.cpp)
target_include_directories(app PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(app PRIVATE raylib ${OpenCV_LIBS})

